--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": "googleapis/nodejs-storage",
   "main": "./build/src/index.js",
-  "types": "./build/src/index.t.ds",
+  "types": "./build/src/index.d.ts",
   "files": [
     "build/src",
     "AUTHORS",
